apps/observability/kiali/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: observability
spec:
  hostnames:
    - kiali.darkflame.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kiali
          port: 20001
      matches:
        - path:
            type: PathPrefix
            value: /
